# rust-daily-snippets

./: Cargo.toml  README.md
crates/debug-with-derive/: Cargo.toml
crates/debug-with-derive/src/: main.rs
crates/enums-basic/: Cargo.toml
crates/enums-basic/src/: main.rs
crates/generics-basic/: Cargo.toml
crates/generics-basic/src/: main.rs
crates/lifetime-basic/: Cargo.toml  README.md
crates/lifetime-basic/src/: main.rs
crates/lifetime-error-reference/: Cargo.toml
crates/lifetime-error-reference/src/: main.rs
crates/lifetime-fixed-missing-lifetime/: Cargo.toml
crates/lifetime-fixed-missing-lifetime/src/: main.rs
crates/lifetime-missing-lifetime/: Cargo.toml
crates/lifetime-missing-lifetime/src/: main.rs
crates/ownership-dangling-reference/: Cargo.toml
crates/ownership-dangling-reference/src/: main.rs
crates/pattern_newtype_cc_masking/: Cargo.toml
crates/pattern_newtype_cc_masking/src/: main.rs
crates/unsafe-mutate-static/: Cargo.toml
crates/unsafe-mutate-static/src/: main.rs
crates/webapp-actix-basic/: Cargo.toml
crates/webapp-actix-basic/src/: main.rs
crates/webapp-axum-basic/: Cargo.toml
crates/webapp-axum-basic/src/: main.rs
src/: main.rs  webapp_actix_basic.rs  webapp_axum_basic.rs
