[package]
name = "rust-daily-snippets"
version = "0.1.0"
edition = "2021"
authors = ["Richard Sentino"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "crates/webapp-actix-basic",
  "crates/webapp-axum-basic",
  "crates/generics-basic",
  "crates/enums-basic",
  "crates/unsafe-mutate-static",
  "crates/lifetime-basic",
  "crates/ownership-dangling-reference",
  "crates/lifetime-error-reference",
  "crates/lifetime-missing-lifetime",
  "crates/lifetime-fixed-missing-lifetime",
  "crates/pattern_newtype_cc_masking"
]

[dependencies]
